# blender_render

./: .gitignore  FIXED_README.md  Makefile  README.md  SETUP.md  cleanup.bat  cleanup.ps1  cli_render_test.py  main copy.py  main.py  main_gui_enhanced.py  main_gui_updated.py  package-lock.json  package.json  pyproject.toml  render_settings.json  requirements.txt
ai_tools/: __init__.py  fastdvdnet_wrapper.py  oidn_wrapper.py  realesrgan_wrapper.py  rife_wrapper.py
app/: page.tsx
blender-render-app/: main.py  start.bat  start.sh
blender-render-app(1)/: requirements.txt
blender-render-app(1)/lib/: cloud-providers.ts
blender-render-app/app/: page.tsx
blender-render-app/components/: cloud-cost-optimizer.tsx  cloud-job-monitor.tsx
components/: cloud-render-panel.tsx
config/: user_settings.json
core/: __init__.py  blender_engine.py  blender_engine.py.backup  blender_engine_fixed_part2.py  blender_engine_original.py  cuda_accelerator.py  file_manager.py  settings_manager.py
gui/: __init__.py
lib/: cloud-api.ts
processing/: __init__.py  denoise_numba.py  interpolation_cython.py  interpolation_python.py  upscale_numba.py  video_encoder.py
tests/: __init__.py
utils/: __init__.py  gpu_detector.py  logger.py  path_validator.py
